@@ -1,11 +1,18 @@
 == Release 4.4.2.0
 
-    * Fixed: Bug in FORMATTED STRING OVER UART element, when using
-    command \0xFE instead of \xFE ldmicro closes (#120)
-
     * New: Incremental QUADRATURE ENCODER instruction.
     See manual.txt and
     https://github.com/LDmicro/LDmicro/wiki/Incremental-QUADRATURE-ENCODER
+
+    * Fixed: Bug: UART box shows up even if UART is deleted from the ladder
+    diagram after simulating.(#126)
+
+    * Fixed: Bug in FORMATTED STRING OVER UART element, when using
+    command \0xFE instead of \xFE ldmicro closes.(#120)
+
+    * Fixed: The code generated for the Reset instruction
+    of any Counter type looks incorrect as the counter variable is reset 
+    to 0 and not to the counter's "Start Value" value.(#125)
 
 == Release 4.4.1.1
 
